- adjust when display default button - adjust default selection is enabled
- fix bug in accont selector disabled
- fix bug in price feed display


Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1775,7 +1775,10 @@
         "faucet_address": "Faucet",
         "faucet_address_text": "The faucet address is used to pay the registration fee for new users.",
         "fee_asset": "Default fee paying asset",
-        "change_default_fee_asset": "Change default asset",
+        "change_default_fee_asset": "Change default fee asset",
+        "change_default_fee_asset_tooltip": "Change the default asset that is used to pay the transaction fee",
+        "change_default": "Change default",
+        "change": "Change",
         "general": "General",
         "general_text": "Adjust the basic settings.",
         "global_settings": "Default Global Settings",
