--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -749,7 +749,7 @@
                 },
                 "title": "Collateral Bids"
             },
-            "cumulative": "Cumulative",
+            "cumulative": "Σ",
             "fee_pool": {
                 "claim_balance": "Claim fee pool balance",
                 "claim_fees": "Claim fees",
