2761-Portfolio Column Customization - Add Dropdown Menu with Checkboxes that allows toggling of hiding columns - Add translations for dropdown options - Add persistence of selected options in viewSettings - Add styling to dropdown menu - Add functionality to hide columns in AccountPortfolioList

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -45,6 +45,16 @@
             "title": "History Export",
             "use_custom": "Use custom wrapper"
         },
+        "enabled_columns": {
+            "default": "Customize the Columns",
+            "buy": "Buy",
+            "deposit": "Deposit",
+            "withdraw": "Withdraw",
+            "trade": "Trade",
+            "borrow": "Borrow",
+            "settle": "Settle",
+            "burn": "Burn"
+        },
         "filter_orders": "Filter...",
         "follow": "Add contact",
         "group_by_asset": "Group by asset",
