Added settle orders info to account overview

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -193,6 +193,7 @@
         "see_open": "See open orders",
         "select_placeholder": "Select Account...",
         "settle": "Settle",
+        "settle_orders": "Settle orders",
         "show_hidden": "Hidden",
         "show_ignored": "Show hidden accounts",
         "show_visual": "Visual",
