Implemented resolve modal UI & fixed filter issues

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1629,6 +1629,9 @@
             "yes": "YES",
             "no": "NO",
             "amount": "Amount"
+        },
+        "resolve_modal": {
+            "title": "Resolve"
         }
     },
     "proposal": {
