- added settlement table - refactored

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -691,6 +691,8 @@
         "settle": "Settlement",
         "settle_better_marketprice": "Market price is in favour",
         "settle_better_settleprice": "Settlement price is in favour",
+        "settlement_date": "Settlement date",
+        "settlement_description": "Settlement of %(quoteAsset)s %(quoteName)s",
         "settle_delay": "This asset will settle in %(hours)s hours",
         "settle_delay_globally_settled": "This asset will settle instantly",
         "settle_globally_settled": "Settle instantly",
