--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -775,7 +775,7 @@
             "invalid": "The asset name %(name)s is invalid",
             "margin_positions": {
                 "empty": "No margin positions",
-                "click_to_switch_to_cumulative": "Click to switch to cumulative sum of the columns.",
+                "click_to_switch_to_cumulative": "Click to switch between cumulative and position values",
                 "ratio_danger": "Position is below MCR and will be margin called",
                 "ratio_warning": "Position is near MCR and in danger of being margin called",
                 "title": "Margin positions"
