--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2083,6 +2083,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "The bridge does not have enough of the desired asset for this buy order",
         "own_account": "You hold keys for this account",
+        "print_receipt": "Click here to create pdf receipt",
         "propose_scam": "This proposal was created by a known scammer or from someone that you blacklisted! Approval not possible.",
         "propose_tip": "Propose another user to initiate a transaction",
         "propose_unhide": "Do not uncheck this unless you know what you are doing",
