--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -311,7 +311,14 @@
             "balance_number": "Баланс #%(id)s",
             "explain": "Вестинговые балансы включают в себя все отчисления, заработанные в реферальной программе или, например, выплат работникам. У них есть определенный вестинг-период, в течение которого средства последовательно разблокируются вплоть до полной доступности всех балансов",
             "no_balances": "У этого аккаунта нет вестинговых балансов",
-            "title": "Вестинговые балансы"
+            "title": "Вестинговые балансы",
+            "type": {
+                "unspecified": "Unspecified",
+                "cashback": "Cashback",
+                "worker": "Worker",
+                "witness": "Witness",
+                "market_fee_sharing": "Market fee sharing"
+            }
         },
         "votes": {
             "about": "Подробнее",
