--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -77,6 +77,7 @@
             "cashback": "権利確定残高",
             "claim": "今すぐ請求",
             "coindays": "コイン・日",
+            "days": "days",
             "earned": "獲得したコイン・日",
             "expires": "期限切れ",
             "fee_allocation": "手数料割り当て",
