--- a/app/assets/locales/locale-de.json
+++ b/app/assets/locales/locale-de.json
@@ -77,6 +77,7 @@
             "cashback": "Skonto",
             "claim": "Guthaben einfordern",
             "coindays": "Münztage",
+            "days": "days",
             "earned": "Erworbene Münztage",
             "expires": "endet",
             "fee_allocation": "Gebührenverteilung",
