--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -77,6 +77,7 @@
             "cashback": "Reembolso",
             "claim": "Reclama ahora",
             "coindays": "días de monedas",
+            "days": "days",
             "earned": "Días de monedas ganadas",
             "expires": "expira",
             "fee_allocation": "Asignación de Comisiones",
