--- a/app/assets/locales/locale-fr.json
+++ b/app/assets/locales/locale-fr.json
@@ -77,6 +77,7 @@
             "cashback": "Gagné",
             "claim": "Claim now",
             "coindays": "coin days",
+            "days": "days",
             "earned": "Coin days earned",
             "expires": "expires",
             "fee_allocation": "Fee Allocation",
