--- a/app/assets/locales/locale-it.json
+++ b/app/assets/locales/locale-it.json
@@ -77,6 +77,7 @@
             "cashback": "Saldo del bilancio vesting",
             "claim": "Riscuoti ora",
             "coindays": "coin days",
+            "days": "days",
             "earned": "Coin days raggiunti",
             "expires": "scade",
             "fee_allocation": "Allocazione commissioni",
