--- a/app/assets/locales/locale-ko.json
+++ b/app/assets/locales/locale-ko.json
@@ -77,6 +77,7 @@
             "cashback": "캐쉬백",
             "claim": "Claim now",
             "coindays": "coin days",
+            "days": "days",
             "earned": "Coin days earned",
             "expires": "만료됨",
             "fee_allocation": "수수료 분배",
