--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -77,6 +77,7 @@
             "cashback": "Остаток вестингового баланса",
             "claim": "Востребовать сейчас",
             "coindays": "монето-дней",
+            "days": "days",
             "earned": "Накоплено монето-дней",
             "expires": "Истекает",
             "fee_allocation": "Распределение комиссии",
