--- a/app/assets/locales/locale-tr.json
+++ b/app/assets/locales/locale-tr.json
@@ -77,6 +77,7 @@
             "cashback": "Tutulan bakiye miktarı",
             "claim": "Şimdi iste",
             "coindays": "koin günler",
+            "days": "days",
             "earned": "Kazanılmış koin günü",
             "expires": "bitiş tarihi",
             "fee_allocation": "Ücret Tahsisi",
