--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -77,6 +77,7 @@
             "cashback": "返现",
             "claim": "立即申领",
             "coindays": "币天",
+            "days": "days",
             "earned": "已获得币天",
             "expires": "到期时间",
             "fee_allocation": "手续费分配",
