refactor orders and include in bitsharesjs
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -194,6 +194,7 @@
         "select_placeholder": "Select Account...",
         "settle": "Settle",
         "settle_orders": "Settle orders",
+        "market_orders": "Market orders",
         "show_hidden": "Hidden",
         "show_ignored": "Show hidden accounts",
         "show_visual": "Visual",
