--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2310,20 +2310,36 @@
         "header": "Transfer details",
         "header_subheader": "Send funds from an account you control to another %(wallet_name)s account holder.",
         "header_subheader_propose": "Propose to send funds from one %(wallet_name)s account to another. The BY account is the account proposing the transaction.",
-        "items": "Items",
         "amount": "Amount",
         "memo": "Memo / Message",
         "memo_unlock": "Unlock your wallet/account in order to see this memo",
         "optional": "Optional",
-        "pay_button": "Pay %(asset)s to %(name)s",
-        "pay_from": "Pay From",
-        "pay_invoice": "Pay Invoice",
         "phase_out_warning": "We recommend using the new {modal_link} modal as this page will be phased out",
         "see": "SEE MY TRANSFERS",
         "send": "Send",
-        "to": "Pay To",
         "total": "Total: ",
         "warn_name_unable_read_memo": "Proposed sender will be unable to read this memo!"
+    },
+    "invoice": {
+        "payment_request": "Payment request",
+        "pay_button": "Pay %(asset)s to %(name)s",
+        "paid_by": "Paid by",
+        "pay_invoice": "Pay Invoice",
+        "pay_to": "Pay To",
+        "items": "Items",
+        "amount": "Amount",
+        "unit": "Unit",
+        "total": "Total",
+        "print_receipt": "Print receipt",
+        "note": "Note",
+        "invalid_format": "Invoice has invalid format",
+        "memo": "Memo",
+        "date": "Date",
+        "transaction": "Transaction",
+        "receipt_total": "Receipt Total",
+        "recipient_name": "Recipient Name",
+        "payment_proof": "Payment proof",
+        "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain."
     },
     "trx_error": {
         "expire": "Your transaction has expired without being confirmed, please try again later."
